--- a/c++11/Makefile
+++ b/c++11/Makefile
@@ -6,7 +6,8 @@ CXX_FLAGS += -std=c++11
 PROGRAMS += \
 			numeric-limits \
 			variadic-template \
-			template-constructor
+			template-constructor \
+			lambda-vs-functor
 
 .PHONY: all
 all: $(PROGRAMS)
@@ -18,6 +19,9 @@ variadic-template: variadic-template.cpp
 	$(CXX) -o $@ $< $(CXX_FLAGS)
 
 template-constructor: template-constructor.cpp
+	$(CXX) -o $@ $< $(CXX_FLAGS)
+
+lambda-vs-functor: lambda-vs-functor.cpp
 	$(CXX) -o $@ $< $(CXX_FLAGS)
 
 clean:
