Make compilation outputs to build/

--- a/c++11/Makefile
+++ b/c++11/Makefile
@@ -1,6 +1,8 @@
 
 RM = rm -rf
 
+BUILD_DIR = ./build
+
 CXX_FLAGS += -std=c++11
 
 PROGRAMS += \
@@ -10,19 +12,22 @@ PROGRAMS += \
 			lambda-vs-functor
 
 .PHONY: all
-all: $(PROGRAMS)
+all: make_build_dir $(PROGRAMS)
+
+make_build_dir:
+	@mkdir -p $(BUILD_DIR)
 
 numeric-limits: numeric-limits.cpp
-	$(CXX) -o $@ $< $(CXX_FLAGS)
+	$(CXX) -o $(BUILD_DIR)/$@ $< $(CXX_FLAGS)
 
 variadic-template: variadic-template.cpp
-	$(CXX) -o $@ $< $(CXX_FLAGS)
+	$(CXX) -o $(BUILD_DIR)/$@ $< $(CXX_FLAGS)
 
 template-constructor: template-constructor.cpp
-	$(CXX) -o $@ $< $(CXX_FLAGS)
+	$(CXX) -o $(BUILD_DIR)/$@ $< $(CXX_FLAGS)
 
 lambda-vs-functor: lambda-vs-functor.cpp
-	$(CXX) -o $@ $< $(CXX_FLAGS)
+	$(CXX) -o $(BUILD_DIR)/$@ $< $(CXX_FLAGS)
 
 clean:
-	$(RM) *.o $(PROGRAMS)
+	$(RM) $(BUILD_DIR)
