initialization of variable sized array

--- a/c++11/Makefile
+++ b/c++11/Makefile
@@ -31,6 +31,9 @@ $(BUILD_DIR)/utility-pair: utility-pair.cpp
 $(BUILD_DIR)/utility-tuple: utility-tuple.cpp
 	$(CXX) -o $@ $< $(CXX_FLAGS)
 
+$(BUILD_DIR)/variable-sized-object: variable-sized-object.cpp
+	$(CXX) -o $@ $< $(CXX_FLAGS)
+
 .PHONY: clean
 clean:
 	$(RM) $(BUILD_DIR)
